--- a/src/viewer/style.css
+++ b/src/viewer/style.css
@@ -1,8 +1,20 @@
 body {
-  margin: 0;
+  margin: 20px;
+  color: #f1f1f1;
   background-color: #0e0e0e;
 }
 
-#list {
-  display: flex;
+#gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  gap: 36px;
+  align-items: center;
+  justify-items: center;
+}
+
+.thumbnail {
+  display: block;
+  max-width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: contain;
 }
